<?xml version="1.0"?>
<package format="3">

    <!-- 包信息 -->
    <name>yl_msgs</name>
    <version>0.1.0</version>
    <description>
        Custom ROS2 messages of YingLoong project.
    </description>
    <url type="bug tracker">https://github.com/LauZanMo/yingloong_ros/issues</url>
    <url type="repository">https://github.com/LauZanMo/yingloong_ros</url>

    <!-- 工程作者 -->
    <author email="LauZanMo@whu.edu.cn">LauZanMo</author>
    <maintainer email="LauZanMo@whu.edu.cn">LauZanMo</maintainer>

    <!-- 许可证 -->
    <license>GPLv3</license>

    <!-- ROS包依赖 -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <depend>std_msgs</depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <!-- 导出可执行文件 -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
