<?xml version="1.0"?>
<package format="3">

    <!-- 包信息 -->
    <name>yl_slam_ros</name>
    <version>0.1.0</version>
    <description>
        SLAM module of YingLoong project implemented with ROS2.
    </description>
    <url type="bug tracker">https://github.com/LauZanMo/yingloong_ros/issues</url>
    <url type="repository">https://github.com/LauZanMo/yingloong_ros</url>

    <!-- 工程作者 -->
    <author email="LauZanMo@whu.edu.cn">LauZanMo</author>
    <maintainer email="LauZanMo@whu.edu.cn">LauZanMo</maintainer>

    <!-- 许可证 -->
    <license>GPLv3</license>

    <!-- ROS2依赖 -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>cv_bridge</depend>
    <depend>pcl_ros</depend>
    <depend>rosbag2_transport</depend>
    <depend>yl_msgs</depend>
    <exec_depend>ros2launch</exec_depend>

    <!-- 系统依赖 -->
    <depend>eigen</depend>
    <depend>spdlog</depend>
    <depend>yaml-cpp</depend>
    <depend>tbb</depend>
    <depend>libopencv-dev</depend>
    <depend>libpcl-all-dev</depend>
    <depend>libgoogle-glog-dev</depend>
    <depend>libgflags-dev</depend>
    <depend>atlas</depend>
    <depend>suitesparse</depend>

    <!-- 导出可执行文件 -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
